西暦和暦変換サイトを追加

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div>
           <h3 id="Skill">Skill</h3>
-          <p>（プログラマーの実務未経験、開発経験を積みたい）</p>p>
+          <p>（プログラマーの実務未経験、開発経験を積みたい）</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item disabled" aria-disabled="true">資格・検定</li>
             <li class="list-group-item">第二種電気工事士</li>
@@ -170,14 +170,25 @@
 
       <div class="row">
           <h2 id="Works">Works</h2>
+          <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
           <a href="https://github.com/Err0r-SOZGGway" target="_blank"><p>Github</p></a>
           <a href="timeGame.html"><h3>時間当てゲーム</h3></a>
           <p>N予備校の教材を参考に制作。20秒ピッタリに止めることを目指すゲーム。</p>
           <p>使用言語:HTML,CSS,JavaScript</p>
           <div class="col-sm-6">
+          <h3>西暦→和暦変換</h3>
+          <p>西暦1926年～2030年までの和暦を調べる事が出来る。<br>入力欄に1926から2030までの数字を入力することで、和暦が出力される。</p>
+          <p>使用言語:HTML(Bootstrap5),CSS,JavaScript</p>
+          </div>
+          <div class="col-sm-6">
+            <a href="calendar.html">
+              <img src="Calendar.png" class="img-fluid" alt="西暦和暦変換サイト">
+            </a>
+          </div>
+          <div class="col-sm-6">
             <h3>あなたのいいところ診断</h3>
             <p>N予備校のプログラミング入門コースにて制作</p>
-            <p>入力欄に名前を入れると、あなたのいいところを表示してくれる。診断結果は、ツイートボタンよりTwitterでツイートする事が可能。</p>
+            <p>入力欄に名前を入れると、あなたのいいところを表示してくれる。<br>診断結果は、ツイートボタンよりTwitterでツイートする事が可能。</p>
             <p>使用言語:HTML(Bootstrap5),CSS,JavaScript</p>
           </div>
           <div class="col-sm-6">
