Skill欄のリストをTableに改修

--- a/index.html
+++ b/index.html
@@ -88,66 +88,122 @@
               <li class="list-group-item">第二種電気工事士</li>
               <li class="list-group-item">基本情報技術者試験　合格</li>
             </ul>
-            <br>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item disabled" aria-disabled="true">OS</li>
-              <li class="list-group-item disabled" aria-disabled="true">経験年数</li>
-              <li class="list-group-item disabled" aria-disabled="true">レベル</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Windows</li>
-              <li class="list-group-item">４年</li>
-              <li class="list-group-item">開発環境の構築が可能</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Linux(Ubuntu)</li>
-              <li class="list-group-item">１年</li>
-              <li class="list-group-item">開発環境の構築、Githubへのpush、サーバー構築の経験あり</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Docker</li>
-              <li class="list-group-item">1ヶ月</li>
-              <li class="list-group-item">（現在学習中）開発環境の構築経験あり</li>
-            </ul>
-              <li class="list-group-item disabled" aria-disabled="true">言語</li>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">HTML5(HTML)</li>
-              <li class="list-group-item">４年１ヶ月</li>
-              <li class="list-group-item">Bootstrap5を使った静的Webページの作成が可能</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">CSS3(CSS)</li>
-              <li class="list-group-item">４年１ヶ月</li>
-              <li class="list-group-item">静的Webページの簡易的な装飾が可能</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Python</li>
-              <li class="list-group-item">２年１０ヶ月</li>
-              <li class="list-group-item">開発環境の構築、簡易的なアプリケーションの作成が可能</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Java</li>
-              <li class="list-group-item">５ヶ月</li>
-              <li class="list-group-item">（現在学習中）開発環境の構築、簡易的なアプリケーションの作成が可能</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">C++</li>
-              <li class="list-group-item">３ヶ月</li>
-              <li class="list-group-item">（学習中）開発環境の構築、標準入出力の基本的な構文が書ける</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Eclipse</li>
-              <li class="list-group-item">１ヶ月</li>
-              <li class="list-group-item">（現在学習中）開発環境の構築が可能</li>
-            </ul>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Unity</li>
-              <li class="list-group-item">１年</li>
-              <li class="list-group-item">開発環境の構築、3Dゲームの作成が可能</li>
-            </ul>
+          </div>
+
+          <br>
+
+          <div class="col-sm-12 js-fadeUp">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>OS</th>
+                  <th>経験年数</th>
+                  <th>レベル・概要</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>Windows</th>
+                  <th>４年</th>
+                  <th>開発環境の構築が可能</th>
+                </tr>
+                <tr>
+                  <th>Linux(Ubuntu)、UNIX</th>
+                  <th>１年</th>
+                  <th>開発環境の構築、Githubへのpush、サーバー構築の経験あり</th>
+                </tr>
+                <tr>
+                  <th>Docker</th>
+                  <th>3ヶ月</th>
+                  <th>開発環境の構築経験あり、コンテナを使ったサーバーサイドの開発経験あり</th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <br>
+
+          <div class="col-sm-12 js-fadeUp">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>言語</th>
+                  <th>経験年数</th>
+                  <th>レベル・概要</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>HTML5(HTML)</th>
+                  <th>４年１ヶ月</th>
+                  <th>Bootstrap5を使った静的Webページの作成が可能</th>
+                </tr>
+                <tr>
+                  <th>CSS3(CSS)</th>
+                  <th>４年１ヶ月</th>
+                  <th>静的Webページの簡易的な装飾が可能</th>
+                </tr>
+                <tr>
+                  <th>Python</th>
+                  <th>２年１０ヶ月</th>
+                  <th>開発環境の構築、簡易的なアプリケーションの作成が可能</th>
+                </tr>
+                <tr>
+                  <th>Java</th>
+                  <th>８ヶ月</th>
+                  <th>開発環境の構築、簡易的なアプリケーションの作成が可能</th>
+                </tr>
+                <tr>
+                  <th>C++</th>
+                  <th>３ヶ月</th>
+                  <th>（学習中）開発環境の構築、標準入出力の基本的な構文が書ける</th>
+                </tr>
+                <tr>
+                  <th>Eclipse</th>
+                  <th>６ヶ月</th>
+                  <th>開発環境の構築が可能</th>
+                </tr>
+                <tr>
+                  <th>Unity</th>
+                  <th>１年</th>
+                  <th>開発環境の構築、3Dゲームの作成が可能</th>
+                </tr>
+                <tr>
+                  <th>PHP</th>
+                  <th>１ヶ月</th>
+                  <th>開発環境の構築、演算や条件分岐などの基本的な構文が書ける</th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <br>
+
+          <div class="col-sm-12 js-fadeUp">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>DB</th>
+                  <th>経験年数</th>
+                  <th>レベル・概要</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>PostgreSQL</th>
+                  <th>３ヶ月</th>
+                  <th>環境構築、SELECT、INSERT、UPDATE、DELETEなどの基本的なDMLと関数の記述が可能</th>
+                </tr>
+                <tr>
+                  <th>MySQL</th>
+                  <th>１ヶ月</th>
+                  <th>環境構築、SELECT、INSERT、UPDATE、DELETEなどの基本的なDMLと関数の記述が可能</th>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
-
+        
       <div class="row">
         <h2 id="About">About</h2>
           <div class="col-sm-4 js-fadeUp">
