スケッチの画像を中央寄せで配置

--- a/index.html
+++ b/index.html
@@ -234,42 +234,50 @@
             <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
             <a href="https://github.com/Err0r-SOZGGway" target="_blank"><p>Github</p></a>
           </div>
+          
           <div class="js-fadeUp col-sm-6">
             <h3>時間当てゲーム</h3>
             <p>N予備校の教材を参考に制作。20秒ピッタリに止めることを目指すゲーム。</p>
             <p>使用言語:HTML,CSS,JavaScript</p>
           </div>
+
           <div class="js-fadeUp col-sm-6">
             <a href="timeGame.html">
               <img src="timeGame.png" class="img-fluid" alt="時間当てゲーム">
             </a>
           </div>
+
           <div class="js-fadeUp col-sm-6">
             <h3>西暦→和暦変換</h3>
             <p>西暦1926年～2030年までの和暦を調べる事が出来る。<br>入力欄に1926から2030までの数字を入力することで、和暦が出力される。</p>
             <p>使用言語:HTML(Bootstrap5),CSS,JavaScript</p>
           </div>
+
           <div class="js-fadeUp col-sm-6">
             <a href="calendar.html">
               <img src="Calendar.png" class="img-fluid" alt="西暦和暦変換サイト">
             </a>
           </div>
+
           <div class="js-fadeUp col-sm-6">
             <h3>あなたのいいところ診断</h3>
             <p>N予備校のプログラミング入門コースにて制作</p>
             <p>入力欄に名前を入れると、あなたのいいところを表示してくれる。<br>診断結果は、ツイートボタンよりTwitterでツイートする事が可能。</p>
             <p>使用言語:HTML(Bootstrap5),CSS,JavaScript</p>
           </div>
+
           <div class="js-fadeUp col-sm-6">
             <a href="https://Err0r-SOZGGway.github.io/assessment/assessment.html">
               <img src="github_work1.png" class="img-fluid" alt="あなたのいいところ診断サイト">
             </a>
           </div>
-          <div class="js-fadeUp col-sm-12">
-            <h3>Openprocessingで作成したスケッチ</h3>
+
+          <h3>Openprocessingで作成したスケッチ</h3>
             <p>openprocessingというサイトで作成したスケッチ。スケッチ内にポインタを置くと周囲に様々な色の円が描写される。</p>
+          <div class="js-fadeUp col-sm-12 sketch">
             <iframe src="https://openprocessing.org/sketch/1174070/embed/" width="800" height="400"></iframe>
           </div>
+
           <div class="js-fadeUp col-sm-12">
             <h3>ブロック崩しゲーム</h3>
             <p>Unityで作成したブロック崩しゲーム</p>
