スケッチの表示と非表示を切り替えるボタンを追加

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="jquery.inview.min.js"></script>
   <script src="fadeUp.js"></script>
+  <script src="toggle.js"></script>
 
   <!-- Vue.js CDN -->
   <!--script src="https://unpkg.com/vue@next"></script> -->
@@ -234,7 +235,7 @@
             <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
             <a href="https://github.com/Err0r-SOZGGway" target="_blank"><p>Github</p></a>
           </div>
-          
+
           <div class="js-fadeUp col-sm-6">
             <h3>時間当てゲーム</h3>
             <p>N予備校の教材を参考に制作。20秒ピッタリに止めることを目指すゲーム。</p>
@@ -274,6 +275,7 @@
 
           <h3>Openprocessingで作成したスケッチ</h3>
             <p>openprocessingというサイトで作成したスケッチ。スケッチ内にポインタを置くと周囲に様々な色の円が描写される。</p>
+            <input type="button" class="btnSketch" value="スケッチの表示切り替え">
           <div class="js-fadeUp col-sm-12 sketch">
             <iframe src="https://openprocessing.org/sketch/1174070/embed/" width="800" height="400"></iframe>
           </div>
