sectionタグとarticleタグを追加してコンテンツを分割

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
   <div class="container">
     <div class="starter-template">
+      <section>
         <div>
           <h2 id="Profile">Profile</h2>
           <p>年齢：２３</p>
@@ -204,8 +205,10 @@
             </table>
           </div>
         </div>
+      </section>
         
-      <div class="row">
+    <div class="row">
+      <article>
         <h2 id="About">About</h2>
           <div class="col-sm-4 js-fadeUp">
             <h3><i class="fa-solid fa-handshake-simple fa-2x"></i><br>協調性</h3>
@@ -228,8 +231,10 @@
             <i class="fa-solid fa-person-circle-exclamation fa-2x"></i><br>課題発見力</h3>
             <p>元職場で作業内容などの改善案を提案して実施してきた経験から、不具合や修正するべき箇所を広い視野で発見し、様々な解決策を用いたトライアルアンドエラーで解決まで導きます。</p>
           </div>
+      </article>
 
-      <div class="row">
+      <article>
+        <div class="row">
           <div class="js-fadeUp">
           <h2 id="Works">Works</h2>
             <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
@@ -285,7 +290,8 @@
             <p>Unityで作成したブロック崩しゲーム</p>
             <img src="Brock.png" class="img-fluid" alt="ブロック崩しゲーム">
           </div>
-      </div>
+        </div>
+      </article>
     </div>
   </div>
 
