--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
     <div class="starter-template">
       <section>
         <div>
-          <h2 id="Profile">Profile</h2>
+          <h2 class="title" id="Profile">Profile</h2>
           <p>年齢：２３</p>
           <p id="birthTime"></p>
           <script src="birthDay.js"></script>
           <p>性別：男</p>
-          <p>趣味：プログラミング、旅行、音楽鑑賞（Hardcore,HardStyle etc...）</p>
-          <p>性格：真面目、素直</p>
+          <p>趣味：プログラミング、旅行、音楽鑑賞（Hardcore,HardStyle etc...）、ゲーム</p>
+          <p>性格：真面目、素直、面白いことが好き</p>
           <p>情報系の大学に入学後、プログラミングの学習を開始。金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、現在に至る。</p>
         </div>
 
         <div>
-          <h2 id="Skill">Skill</h2>
+          <h2 class="title" id="Skill">Skill</h2>
           <div class="js-fadeUp">
             <ul class="list-group list-group-flush">
               <li class="list-group-item disabled" aria-disabled="true">資格・検定</li>
@@ -209,19 +209,19 @@
         
     <div class="row">
       <article>
-        <h2 id="About">About</h2>
-          <div class="col-sm-4 js-fadeUp">
+        <h2 class="title" id="About">About</h2>
+          <div class="col-sm-12 aboutStyle js-fadeUp">
             <h3><i class="fa-solid fa-handshake-simple fa-2x"></i><br>協調性</h3>
             <p>自動車メーカーの工場でライン作業に従事していた経験から、チームで連携して業務を遂行する能力があります。</p>
           </div>
-          <div class="col-sm-4 js-fadeUp">
+          <div class="col-sm-12 aboutStyle js-fadeUp">
             <h3><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-git" viewBox="0 0 16 16">
               <path d="M15.698 7.287 8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45 1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025 1.226 1.226 0 0 1-2.002-1.334L8.58 5.963v4.353a1.226 1.226 0 1 1-1.008-.036V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.031 1.031 0 0 0 0-1.457"/>
             </svg>
             <i class="fa-solid fa-person-circle-question fa-2x"></i><br>向学心</h3>
             <p>仕事終わりや休日に学習してきた向学心を活かし、情報収集や勉強を欠かさず行います。自分のスキルを磨いていくことを忘れません。</p>
           </div>
-          <div class="col-sm-4 js-fadeUp">
+          <div class="col-sm-12 aboutStyle js-fadeUp">
             <h3><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
               <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
             </svg>
@@ -234,9 +234,9 @@
       </article>
 
       <article>
-        <div class="row">
+      <div class="row">
           <div class="js-fadeUp">
-          <h2 id="Works">Works</h2>
+          <h2 class="title" id="Works">Works</h2>
             <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
             <a href="https://github.com/Err0r-SOZGGway" target="_blank"><p>Github</p></a>
           </div>
@@ -290,7 +290,7 @@
             <p>Unityで作成したブロック崩しゲーム</p>
             <img src="Brock.png" class="img-fluid" alt="ブロック崩しゲーム">
           </div>
-        </div>
+      </div>
       </article>
     </div>
   </div>
