Skillの文面を修正

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <thead>
                 <tr>
                   <th>OS</th>
-                  <th>経験年数</th>
+                  <th>使用年数</th>
                   <th>レベル・概要</th>
                 </tr>
               </thead>
@@ -130,7 +130,7 @@
               <thead>
                 <tr>
                   <th>言語</th>
-                  <th>経験年数</th>
+                  <th>使用年数</th>
                   <th>レベル・概要</th>
                 </tr>
               </thead>
@@ -186,7 +186,7 @@
               <thead>
                 <tr>
                   <th>DB</th>
-                  <th>経験年数</th>
+                  <th>使用年数</th>
                   <th>レベル・概要</th>
                 </tr>
               </thead>
@@ -307,7 +307,7 @@
         <li class="nav-item"><a href="#Skill" class="nav-link px-2 text-muted">Skill</a></li>
         <li class="nav-item"><a href="#Works" class="nav-link px-2 text-muted">Works</a></li>
       </ul>
-      <p class="text-center text-muted">&copy; 2023 S.W.</p>
+      <p class="text-center text-muted">&copy; 2022 S.W.</p>
     </footer>
   </div>
 
