文字の位置を修正

--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
       </article>
 
       <article>
-      <div class="row">
+        <div class="row">
           <h2 class="title" id="Works">Works</h2>
+          <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
           <div class="js-fadeUp">
-            <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
-            <a href="https://github.com/Err0r-SOZGGway" target="_blank"><p>Github</p></a>
+            <a href="https://github.com/Err0r-SOZGGway" target="_blank" class="githubLink"><p>Github</p></a>
           </div>
 
           <div class="js-fadeUp col-sm-6">
@@ -280,7 +280,7 @@
             </a>
           </div>
 
-          <div class="js-fadeUp">
+          <div class="worksStyle js-fadeUp">
             <h3>Openprocessingで作成したスケッチ</h3>
               <p>openprocessingというサイトで作成したスケッチ。スケッチ内にポインタを置くと周囲に様々な色の円が描写される。</p>
               <input type="button" class="btnSketch" value="スケッチの表示切り替え">
@@ -289,12 +289,12 @@
             </div>
           </div>
 
-          <div class="js-fadeUp col-sm-12">
+          <div class="worksStyle js-fadeUp col-sm-12">
             <h3>ブロック崩しゲーム</h3>
             <p>Unityで作成したブロック崩しゲーム</p>
             <img src="Brock.png" class="img-fluid" alt="ブロック崩しゲーム">
           </div>
-      </div>
+        </div>
       </article>
     </div>
   </div>
