ブロック崩しの画像のサイズを調整

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="worksStyle js-fadeUp col-sm-12">
             <h3>ブロック崩しゲーム</h3>
             <p>Unityで作成したブロック崩しゲーム</p>
-            <img src="Brock.png" class="img-fluid" alt="ブロック崩しゲーム">
+            <img src="Brock.png" class="img-blockGame" alt="ブロック崩しゲーム">
           </div>
         </div>
       </article>
