WorksにBlenderの欄を追加

--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
             <p>Unityで作成したブロック崩しゲーム</p>
             <img src="Brock.png" class="img-blockGame" alt="ブロック崩しゲーム">
           </div>
+
+          <div class="worksStyle js-fadeUp col-sm-12">
+            <h3>3Dキャラクター（犬）</h3>
+            <p>Blenderで作成した3Dキャラクター</p>
+            <img src="dog_01.png" class="img-blockGame" alt="3Dキャラクター（犬）">
+          </div>
         </div>
       </article>
     </div>
