Zennのリンクを追加

--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
             <a href="https://github.com/Err0r-SOZGGway" target="_blank" class="githubLink"><p>Github</p></a>
           </div>
 
+          <div class="js-fadeUp">
+            <a href="https://zenn.dev/shooww777" target="_blank" class="zennLink"><p>Zenn</p></a>
+          </div>
+
           <div class="js-fadeUp col-sm-6">
             <h3>時間当てゲーム</h3>
             <p>N予備校の教材を参考に制作。20秒ピッタリに止めることを目指すゲーム。</p>
