サイトのロゴを追加

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <!-- ダークモードヒーロー -->
    <div class="bg-dark text-secondary px-4 py-5 text-center">
     <div class="py-5">
-      <h1 class="display-5 fw-bold text-white">WeirdStorage</h1>
+      <img src="Logo.png" class="titleLogo" alt="3Dキャラクター（犬）">
       <div class="col-lg-6 mx-auto">
         <p class="fs-5 mb-4">とあるプログラマーの記録と作品の倉庫</p>
         <!-- 意味は異様な保管場所、他のポートフォリオサイトとはひと味違うサイトにしたいという思いから -->
@@ -302,7 +302,7 @@
           <div class="worksStyle js-fadeUp col-sm-12">
             <h3>3Dキャラクター（犬）</h3>
             <p>Blenderで作成した3Dキャラクター</p>
-            <img src="dog_01.png" class="img-blockGame" alt="3Dキャラクター（犬）">
+            <img src="dog_01.png" class="img-3dDog" alt="3Dキャラクター（犬）">
           </div>
         </div>
       </article>
