GithubとZennのリンクにメッセージを追加

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       <section>
         <div class="profileStyle">
           <h2 class="title" id="Profile">Profile</h2>
-          <p>年齢：２３</p>
+          <p>年齢：２４</p>
           <p id="birthTime"></p>
           <script src="birthDay.js"></script>
           <p>性別：男</p>
-          <p>趣味：プログラミング、旅行、音楽鑑賞（Hardcore,HardStyle etc...）、ゲーム</p>
+          <p>趣味：プログラミング、旅行、イベント・ライブ参加、音楽鑑賞（Hardcore,HardStyle etc...）、ゲーム</p>
           <p>性格：真面目、素直、面白いことが好き</p>
           <p>情報系の大学に入学後、プログラミングの学習を開始。金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、現在に至る。</p>
         </div>
@@ -241,10 +241,12 @@
           <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
           <div class="js-fadeUp">
             <a href="https://github.com/Err0r-SOZGGway" target="_blank" class="githubLink"><p>Github</p></a>
+            <p>学習した言語の成果物をGithubにて管理。JavaのCLIブラックジャックゲームやknockout.jsの学習で書いたソースを配置。</p>
           </div>
 
           <div class="js-fadeUp">
             <a href="https://zenn.dev/shooww777" target="_blank" class="zennLink"><p>Zenn</p></a>
+            <p>未経験エンジニアの心構えに関する記事を投稿。現在JSTQBのシラバスを要点を整理してまとめた記事を執筆中。</p>
           </div>
 
           <div class="js-fadeUp col-sm-6">
@@ -304,6 +306,7 @@
             <p>Blenderで作成した3Dキャラクター</p>
             <img src="dog_01.png" class="img-3dDog" alt="3Dキャラクター（犬）">
           </div>
+          
         </div>
       </article>
     </div>
