--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
   <title>WeirdStorage 作品置き場</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -35,7 +35,7 @@
    <!-- ダークモードヒーロー -->
    <div class="bg-dark text-secondary px-4 py-5 text-center">
     <div class="py-5">
-      <img src="Logo.png" class="titleLogo" alt="3Dキャラクター（犬）">
+      <img src="images/Logo.png" class="titleLogo" alt="3Dキャラクター（犬）">
       <div class="col-lg-6 mx-auto">
         <p class="fs-5 mb-4">とあるプログラマーの記録と作品の倉庫</p>
         <!-- 意味は異様な保管場所、他のポートフォリオサイトとはひと味違うサイトにしたいという思いから -->
@@ -257,7 +257,7 @@
 
           <div class="js-fadeUp col-sm-6">
             <a href="timeGame.html">
-              <img src="timeGame.png" class="img-fluid" alt="時間当てゲーム">
+              <img src="images/timeGame.png" class="img-fluid" alt="時間当てゲーム">
             </a>
           </div>
 
@@ -269,7 +269,7 @@
 
           <div class="js-fadeUp col-sm-6">
             <a href="calendar.html">
-              <img src="Calendar.png" class="img-fluid" alt="西暦和暦変換サイト">
+              <img src="images/Calendar.png" class="img-fluid" alt="西暦和暦変換サイト">
             </a>
           </div>
 
@@ -282,7 +282,7 @@
 
           <div class="js-fadeUp col-sm-6">
             <a href="https://Err0r-SOZGGway.github.io/assessment/assessment.html">
-              <img src="github_work1.png" class="img-fluid" alt="あなたのいいところ診断サイト">
+              <img src="images/github_work1.png" class="img-fluid" alt="あなたのいいところ診断サイト">
             </a>
           </div>
 
@@ -298,13 +298,13 @@
           <div class="worksStyle js-fadeUp col-sm-12">
             <h3>ブロック崩しゲーム</h3>
             <p>Unityで作成したブロック崩しゲーム</p>
-            <img src="Brock.png" class="img-blockGame" alt="ブロック崩しゲーム">
+            <img src="images/Block.png" class="img-blockGame" alt="ブロック崩しゲーム">
           </div>
 
           <div class="worksStyle js-fadeUp col-sm-12">
             <h3>3Dキャラクター（犬）</h3>
             <p>Blenderで作成した3Dキャラクター</p>
-            <img src="dog_01.png" class="img-3dDog" alt="3Dキャラクター（犬）">
+            <img src="images/dog_01.png" class="img-3dDog" alt="3Dキャラクター（犬）">
           </div>
           
         </div>
