jsフォルダを作成、javascriptファイルを格納

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="jquery.inview.min.js"></script>
-  <script src="fadeUp.js"></script>
-  <script src="toggle.js"></script>
+  <script src="js/jquery.inview.min.js"></script>
+  <script src="js/fadeUp.js"></script>
+  <script src="js/toggle.js"></script>
 
   <!-- Vue.js CDN -->
   <!--script src="https://unpkg.com/vue@next"></script> -->
@@ -75,7 +75,7 @@
           <h2 class="title" id="Profile">Profile</h2>
           <p>年齢：２４</p>
           <p id="birthTime"></p>
-          <script src="birthDay.js"></script>
+          <script src="js/birthDay.js"></script>
           <p>性別：男</p>
           <p>趣味：プログラミング、旅行、イベント・ライブ参加、音楽鑑賞（Hardcore,HardStyle etc...）、ゲーム</p>
           <p>性格：真面目、素直、面白いことが好き</p>
@@ -282,7 +282,7 @@
 
           <div class="js-fadeUp col-sm-6">
             <a href="https://Err0r-SOZGGway.github.io/assessment/assessment.html">
-              <img src="images/github_work1.png" class="img-fluid" alt="あなたのいいところ診断サイト">
+              <img src="images/github_work1.jpg" class="img-fluid" alt="あなたのいいところ診断サイト">
             </a>
           </div>
 
@@ -324,7 +324,7 @@
     </footer>
   </div>
 
-  <script src="Loading.js"></script>
+  <script src="js/Loading.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
