--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="appStyle.css">
+  <link rel="stylesheet" href="./css/calendar/appStyle.css">
 </head>
 <body>
   <div class="container">
@@ -35,7 +35,7 @@
       <button id="conversion">和暦に変換！</button>
     </div>
     <div id="result-area"></div>
-    <script src="calendar.js"></script>
+    <script src="./js/calendar/calendar.js"></script>
   </div>
   
 </body>
