--- a/timeGame.html
+++ b/timeGame.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>時間当てゲーム</title>
-  <link rel="stylesheet" href="time.css">
+  <link rel="stylesheet" href="./css/timeGame/time.css">
 </head>
 <body>
   <h1>時間当てゲーム</h1>
   <p>20秒ピッタリを目指そう</p>
   <button id="countTime">計測開始！</button>
   <h1 id="display-area"></h1>
-  <script src="timeGame.js"></script>
+  <script src="./js/timeGame/timeGame.js"></script>
 </body>
 </html>
