--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p>性別：男</p>
           <p>趣味：プログラミング、旅行、イベント・ライブ参加、音楽鑑賞（Hardcore,HardStyle etc...）、ゲーム</p>
           <p>性格：真面目、素直、面白いことが好き</p>
-          <p>情報系の大学に入学後、プログラミングの学習を開始。金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、現在に至る。</p>
+          <p>情報系の大学に入学後、プログラミングの学習を開始。金銭的事情で大学中退後、某自動車メーカーの工場で就業しながらN予備校やPaizaなどを利用してプログラミングの学習と基本情報技術者試験の勉強を行い、IT業界に転職。SESで約1年システム開発業務に従事し、現在に至る。</p>
         </div>
 
         <div>
@@ -107,17 +107,17 @@
                 <tr>
                   <th>Windows</th>
                   <th>４年</th>
-                  <th>開発環境の構築が可能</th>
+                  <th>システム開発業務で１年程Windowsサーバーで作業した経験あり</th>
                 </tr>
                 <tr>
                   <th>Linux(Ubuntu)、UNIX</th>
                   <th>１年</th>
-                  <th>開発環境の構築、Githubへのpush、サーバー構築の経験あり</th>
+                  <th>プライベートで開発環境の構築、Githubへのpush、サーバー構築の経験あり</th>
                 </tr>
                 <tr>
                   <th>Docker</th>
                   <th>3ヶ月</th>
-                  <th>開発環境の構築経験あり、コンテナを使ったサーバーサイドの開発経験あり</th>
+                  <th>プライベートで開発環境の構築経験あり、コンテナを使ったサーバーサイドの開発経験あり</th>
                 </tr>
               </tbody>
             </table>
@@ -138,7 +138,7 @@
                 <tr>
                   <th>HTML5(HTML)</th>
                   <th>４年１ヶ月</th>
-                  <th>Bootstrap5を使った静的Webページの作成が可能</th>
+                  <th>Bootstrap5を使った静的Webページの作成が可能、システム開発業務でソースの改修経験あり</th>
                 </tr>
                 <tr>
                   <th>CSS3(CSS)</th>
@@ -148,32 +148,32 @@
                 <tr>
                   <th>Python</th>
                   <th>２年１０ヶ月</th>
-                  <th>開発環境の構築、簡易的なアプリケーションの作成が可能</th>
+                  <th>プライベートでjupyter-notebookを使った開発環境の構築、簡易的なアプリケーションの作成が可能</th>
                 </tr>
                 <tr>
                   <th>Java</th>
-                  <th>８ヶ月</th>
-                  <th>開発環境の構築、簡易的なアプリケーションの作成が可能</th>
+                  <th>１年</th>
+                  <th>システム開発業務でコーディングの経験あり、プライベートで簡易的なアプリケーションの作成の経験あり</th>
                 </tr>
                 <tr>
                   <th>C++</th>
                   <th>３ヶ月</th>
-                  <th>（学習中）開発環境の構築、標準入出力の基本的な構文が書ける</th>
+                  <th>（学習中）開発環境の構築、競技プログラミングで使用する標準入出力の基本的な構文が書ける</th>
                 </tr>
                 <tr>
                   <th>Eclipse</th>
                   <th>６ヶ月</th>
-                  <th>開発環境の構築が可能</th>
+                  <th>システム開発業務で使用経験あり、その他に使用経緯があるIDEはNetBeansなど</th>
                 </tr>
                 <tr>
                   <th>Unity</th>
                   <th>１年</th>
-                  <th>開発環境の構築、3Dゲームの作成が可能</th>
+                  <th>プライベートで3Dゲームやアクションゲームの作成が可能</th>
                 </tr>
                 <tr>
                   <th>PHP</th>
                   <th>１ヶ月</th>
-                  <th>開発環境の構築、演算や条件分岐などの基本的な構文が書ける</th>
+                  <th>プライベートで開発環境の構築、演算や条件分岐などの基本的な構文が書ける</th>
                 </tr>
               </tbody>
             </table>
@@ -193,13 +193,18 @@
               <tbody>
                 <tr>
                   <th>PostgreSQL</th>
-                  <th>３ヶ月</th>
-                  <th>環境構築、SELECT、INSERT、UPDATE、DELETEなどの基本的なDMLと関数の記述が可能</th>
+                  <th>６ヶ月</th>
+                  <th>システム開発業務でA5:Mk-2を使ってSELECT、INSERT、UPDATE、DELETEの基本的なDMLの記述をした経験あり</th>
                 </tr>
                 <tr>
                   <th>MySQL</th>
                   <th>１ヶ月</th>
-                  <th>環境構築、SELECT、INSERT、UPDATE、DELETEなどの基本的なDMLと関数の記述が可能</th>
+                  <th>プライベートで環境構築を行い、テーブルの作成を行った経験あり</th>
+                </tr>
+                <tr>
+                  <th>OracleDB</th>
+                  <th>６ヶ月</th>
+                  <th>システム開発業務でObjectBrowserを使ってSELECT、INSERT、UPDATE、DELETEなどの基本的なDMLを記述した経験あり</th>
                 </tr>
               </tbody>
             </table>
@@ -239,6 +244,25 @@
         <div class="row">
           <h2 class="title" id="Works">Works</h2>
           <p>弊サイトの使用言語:HTML(Bootstrap5,FontAwesome),CSS,JavaScript(Jquery v3.6.1)</p>
+
+          <div class="js-fadeUp">
+            <h3>参画したプロジェクト</h3>
+            <p>某キャリア法人営業向け支援システム保守開発</p>
+            <ul>
+              <li>使用言語・FW・DB</li>
+              <p>Java8,内製フレームワーク(Spring),OracleDB</p>
+              <li>概要</li>
+              <p>通信キャリアの直営店や量販店などの営業が法人と携帯電話の契約を結ぶ際に、営業が入力した顧客情報を元にして申込書の発行や契約情報の登録、出荷依頼を行うシステムの新規機能開発・既存機能の改修を行うプロジェクト</p>
+            </ul>
+            <p>大学向けポータルサイトパッケージソフトの品質改善</p>
+            <ul>
+              <li>使用言語・FW・DB</li>
+              <p>Java,JavaScript,内製フレームワーク(PrimeFaces,XHTML),PostgreSQL</p>
+              <li>概要</li>
+              <p>大学の職員や教員、学生が使用するポータルサイトパッケージの障害対応を行ってソフトウェアの品質改善を行うプロジェクト</p>
+            </ul>
+          </div>
+
           <div class="js-fadeUp">
             <a href="https://github.com/Err0r-SOZGGway" target="_blank" class="githubLink"><p>Github</p></a>
             <p>学習した言語の成果物をGithubにて管理。JavaのCLIブラックジャックゲームやknockout.jsの学習で書いたソースを配置。</p>
