文面を最新の情報に修正、参画したプロジェクトの情報を追加

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <tr>
                   <th>Unity</th>
                   <th>１年</th>
-                  <th>プライベートで3Dゲームやアクションゲームの作成が可能</th>
+                  <th>プライベートで3Dゲームやアクションゲームの作成をした経験あり</th>
                 </tr>
                 <tr>
                   <th>PHP</th>
